// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VItem should match snapshot activeClass 1`] = `

<div class>
</div>

`;

exports[`VItem should match snapshot activeClass 2`] = `

<div class="foo">
</div>

`;
